Downgrading to java 1.8